--- a/CELL22-Lab11-Data-Analytics.ipynb
+++ b/CELL22-Lab11-Data-Analytics.ipynb
@@ -48,15 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7b294f94",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:13.228610Z",
-     "start_time": "2023-01-11T08:02:13.188572Z"
+     "end_time": "2023-01-13T15:33:25.422927Z",
+     "start_time": "2023-01-13T15:33:25.399414Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "file = Path(r'../../../Downloads/sms-call-internet-mi-2013-12-01.txt')\n",
@@ -81,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "93746715",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:13.244409Z",
-     "start_time": "2023-01-11T08:02:13.233012Z"
+     "end_time": "2023-01-11T10:40:01.932160Z",
+     "start_time": "2023-01-11T10:40:01.919117Z"
     }
    },
    "outputs": [],
@@ -104,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fc735bde",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:13.275849Z",
-     "start_time": "2023-01-11T08:02:13.264847Z"
+     "end_time": "2023-01-11T10:40:01.963628Z",
+     "start_time": "2023-01-11T10:40:01.951608Z"
     }
    },
    "outputs": [],
@@ -127,12 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c95bf76d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:15.197578Z",
-     "start_time": "2023-01-11T08:02:15.185320Z"
+     "end_time": "2023-01-11T10:40:04.289097Z",
+     "start_time": "2023-01-11T10:40:04.276379Z"
     }
    },
    "outputs": [],
@@ -150,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e24157d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:15.245547Z",
-     "start_time": "2023-01-11T08:02:15.236330Z"
+     "end_time": "2023-01-11T10:40:04.321130Z",
+     "start_time": "2023-01-11T10:40:04.307101Z"
     }
    },
    "outputs": [],
@@ -211,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "29f70ded",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:17.446060Z",
-     "start_time": "2023-01-11T08:02:17.439847Z"
+     "end_time": "2023-01-11T10:40:06.914494Z",
+     "start_time": "2023-01-11T10:40:06.893366Z"
     }
    },
    "outputs": [],
@@ -242,12 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1b14383c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:19.983528Z",
-     "start_time": "2023-01-11T08:02:19.972493Z"
+     "end_time": "2023-01-11T10:40:13.516445Z",
+     "start_time": "2023-01-11T10:40:13.505484Z"
     }
    },
    "outputs": [],
@@ -307,12 +318,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ceb17da5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:20.015391Z",
-     "start_time": "2023-01-11T08:02:20.003766Z"
+     "end_time": "2023-01-11T10:40:13.564076Z",
+     "start_time": "2023-01-11T10:40:13.551547Z"
     }
    },
    "outputs": [],
@@ -343,15 +354,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "60737dca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:49.658516Z",
-     "start_time": "2023-01-11T08:02:45.863204Z"
+     "end_time": "2023-01-11T10:40:22.823129Z",
+     "start_time": "2023-01-11T10:40:13.581763Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4438331, 8)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "names = ['sqid', 'time', 'country', 'sms-in', 'sms-out', 'call-in', 'call-out', 'internet']\n",
@@ -398,19 +417,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "91e88306",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:25.102857Z",
-     "start_time": "2023-01-11T08:02:25.042126Z"
+     "end_time": "2023-01-11T10:40:22.868274Z",
+     "start_time": "2023-01-11T10:40:22.828696Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 8)\n",
+      "sqid        1.000000e+00\n",
+      "time        1.385852e+12\n",
+      "country     3.900000e+01\n",
+      "sms-in      1.109892e-01\n",
+      "sms-out     1.662144e-01\n",
+      "call-in     1.092019e-01\n",
+      "call-out    1.644271e-01\n",
+      "internet    1.364844e+01\n",
+      "Name: 0, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(file, names=names, sep='\\t', nrows=100)\n",
-    "print(df.shape)\n",
-    "print(df.iloc[0])"
+    "df1 = pd.read_csv(file, names=names, sep='\\t', nrows=100)\n",
+    "print(df1.shape)\n",
+    "print(df1.iloc[0])"
    ]
   },
   {
@@ -436,20 +472,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5f225df4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:25.133948Z",
-     "start_time": "2023-01-11T08:02:25.105813Z"
+     "end_time": "2023-01-11T10:40:22.898661Z",
+     "start_time": "2023-01-11T10:40:22.872379Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 5)\n",
+      "sms-in       0.110989\n",
+      "sms-out      0.166214\n",
+      "call-in      0.109202\n",
+      "call-out     0.164427\n",
+      "internet    13.648438\n",
+      "Name: 0, dtype: float64\n",
+      "sms-in           NaN\n",
+      "sms-out          NaN\n",
+      "call-in          NaN\n",
+      "call-out         NaN\n",
+      "internet    0.026137\n",
+      "Name: 1, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(file, names=names, sep='\\t', nrows=100, usecols=[3, 4, 5, 6, 7])\n",
-    "print(df.shape)\n",
-    "print(df.iloc[0])\n",
-    "print(df.iloc[1])"
+    "df2 = pd.read_csv(file, names=names, sep='\\t', nrows=100, usecols=[3, 4, 5, 6, 7])\n",
+    "print(df2.shape)\n",
+    "print(df2.iloc[0])\n",
+    "print(df2.iloc[1])"
    ]
   },
   {
@@ -514,12 +570,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "da9d8c3a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:25.149920Z",
-     "start_time": "2023-01-11T08:02:25.136922Z"
+     "end_time": "2023-01-11T10:40:22.914075Z",
+     "start_time": "2023-01-11T10:40:22.902021Z"
     }
    },
    "outputs": [],
@@ -566,12 +622,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "81c0a04c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:29.537647Z",
-     "start_time": "2023-01-11T08:02:29.526118Z"
+     "end_time": "2023-01-11T10:40:31.416006Z",
+     "start_time": "2023-01-11T10:40:31.403008Z"
     }
    },
    "outputs": [],
@@ -592,12 +648,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "395b71d8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:51.820284Z",
-     "start_time": "2023-01-11T08:02:51.739000Z"
+     "end_time": "2023-01-11T10:40:31.495450Z",
+     "start_time": "2023-01-11T10:40:31.420008Z"
     }
    },
    "outputs": [],
@@ -615,12 +671,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f92b7dbe",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:53.838003Z",
-     "start_time": "2023-01-11T08:02:53.821980Z"
+     "end_time": "2023-01-11T10:40:31.511455Z",
+     "start_time": "2023-01-11T10:40:31.499450Z"
     }
    },
    "outputs": [],
@@ -639,27 +695,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "99f63f4b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:54.778398Z",
-     "start_time": "2023-01-11T08:02:54.762120Z"
+     "end_time": "2023-01-11T10:40:31.543453Z",
+     "start_time": "2023-01-11T10:40:31.515454Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80901.14538571677"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1si.sum(axis=0, skipna=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4e21e490",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:30.774531Z",
-     "start_time": "2023-01-11T08:02:30.774531Z"
+     "end_time": "2023-01-11T10:40:31.559981Z",
+     "start_time": "2023-01-11T10:40:31.548462Z"
     }
    },
    "outputs": [],
@@ -696,12 +763,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "edb9b4df",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-11T08:02:30.774531Z",
-     "start_time": "2023-01-11T08:02:30.774531Z"
+     "end_time": "2023-01-11T10:40:36.586413Z",
+     "start_time": "2023-01-11T10:40:36.572965Z"
     }
    },
    "outputs": [],
@@ -711,10 +778,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82576f50",
+   "id": "4d829b26",
    "metadata": {},
    "source": [
     "## Exercice 6 (optional) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2e6158b",
+   "metadata": {},
+   "source": [
+    "Solve the problem from https://gist.github.com/balouf/ee28114beeb1545aed7b682f0af36bd9\n",
+    "\n",
+    "FYI, this is what I asked applicants to solve when I recruited my last developer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82576f50",
+   "metadata": {},
+   "source": [
+    "## Exercice 7 (optional) "
    ]
   },
   {
@@ -747,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
